2009-02-16  Jaroslav Hajek  <highegg@gmail.com>

	* Array-C.cc, Array-fC.cc: Don't redefine complex comparison.
	* Sparse.cc (Sparse::sort): Don't use vec_index.
	* Sparse-C.cc, Sparse-d.cc, Sparse-b.cc: Don't reinstantiate
	octave_sort, reflect changes.
	* sparse-sort.cc: Explicitly instantiate octave_sort for requested
	pointer types.

2009-02-16  Jaroslav Hajek  <highegg@gmail.com>

	* oct-cmplx.h (operator <, operator >): New operators.
	* mx-inlines.cc (OP_MINMAX_FCN, OP_MINMAX_FCN2, OP_MINMAX_FCNN):
	New macros.
	(mx_inline_min, mx_inline_max, do_mx_minmax_op): New overloaded
	template functions.
	* dNDArray (NDArray::min, NDArray::max): Use do_mx_minmax_op.
	* fNDArray (FloatNDArray::min, FloatNDArray::max): Ditto.
	* CNDArray (ComplexNDArray::min, ComplexNDArray::max): Ditto.
	* fCNDArray (FloatComplexNDArray::min, FloatComplexNDArray::max):
	Ditto.

2009-02-16  Jaroslav Hajek  <highegg@gmail.com>

	* chMatrix.cc (charMatrix::all, charMatrix::any): Use do_mx_red_op.
	* chNDArray.cc (charNDArray::all, charNDArray::any): Ditto.

2009-02-16  John W. Eaton  <jwe@octave.org>

	* cmd-edit.cc (default_command_editor::do_readline):
	Use fputs instead of fprintf.

2009-02-14  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc (OP_RED_FCN, OP_RED_FCN2, OP_RED_FCNN, OP_CUM_FCN,
	OP_CUM_FCN2, OP_CUM_FCNN): Include TRET parameter.
	(OP_RED_ANYC, OP_RED_ANYR, OP_RED_ALLC, OP_RED_ALLR): New macros.
	(is_true, is_false): New template functions.
	(mx_inline_any, mx_inline_all): New template functions.

	* dMatrix.cc (Matrix::any, Matrix::all): Use do_mx_red_op and
	do_mx_cum_op.
	* fMatrix.cc (FloatMatrix::any, FloatMatrix::all): Use do_mx_red_op
	and do_mx_cum_op.
	* CMatrix.cc (ComplexMatrix::any, ComplexMatrix::all): Use
	do_mx_red_op and do_mx_cum_op.
	* fCMatrix.cc (FloatComplexMatrix::any, FloatComplexMatrix::all): Use
	do_mx_red_op and do_mx_cum_op.

	* dNDArray.cc (NDArray::any, NDArray::all): Use do_mx_red_op and
	do_mx_cum_op.