@@ -1,4 +1,11 @@
 2009-02-16  Jaroslav Hajek  <highegg@gmail.com>
+	
+	* mx-inlines.cc (OP_RED_FCNN): Use explicit type qualification.
+	(mx_inline_count): New overloaded template function.
+	* boolNDArray.h (boolNDArray::sum): Return NDArray.
+	* boolNDArray.cc (boolNDArray::sum): Return NDArray, use do_mx-red_op.
+
+2009-02-16  Jaroslav Hajek  <highegg@gmail.com>
 
 	* Array-C.cc, Array-fC.cc: Don't redefine complex comparison.
 	* Sparse.cc (Sparse::sort): Don't use vec_index.
